--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,4 +2,7 @@
     --md-primary-fg-color: #b22c00;
     --md-primary-fg-color--light: #b22c00;
     --md-primary-fg-color--dark: #b22c00;
+    --md-accent-fg-color: #ff0000;
+    --md-accent-fg-color--light: #ff0000;
+    --md-accent-fg-color--dark: #ff0000;
 }
