--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,3 +6,7 @@
     --md-accent-fg-color--light: #ff0000;
     --md-accent-fg-color--dark: #ff0000;
 }
+
+[data-md-color-scheme="slate"] {
+    --md-hue: 100;
+}
