--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,10 +1,10 @@
 :root {
-    --md-primary-fg-color: #b22c00;
-    --md-primary-fg-color--light: #b22c00;
-    --md-primary-fg-color--dark: #b22c00;
-    --md-accent-fg-color: #ff0000;
-    --md-accent-fg-color--light: #ff0000;
-    --md-accent-fg-color--dark: #ff0000;
+    --md-primary-fg-color: #F1D459;
+    --md-primary-fg-color--light: #F1D459;
+    --md-primary-fg-color--dark: #F1D459;
+    --md-accent-fg-color: #AF9FB2;
+    --md-accent-fg-color--light: #AF9FB2;
+    --md-accent-fg-color--dark: #AF9FB2;
 }
 
 [data-md-color-scheme="slate"] {
