--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,10 +1,10 @@
 :root {
-    --md-primary-fg-color: #F1D459;
-    --md-primary-fg-color--light: #F1D459;
-    --md-primary-fg-color--dark: #F1D459;
-    --md-accent-fg-color: #AF9FB2;
-    --md-accent-fg-color--light: #AF9FB2;
-    --md-accent-fg-color--dark: #AF9FB2;
+    --md-primary-fg-color: #9B4A46;
+    --md-primary-fg-color--light: #9B4A46;
+    --md-primary-fg-color--dark: #9B4A46;
+    --md-accent-fg-color: #C27A64;
+    --md-accent-fg-color--light: #C27A64;
+    --md-accent-fg-color--dark: #C27A64;
 }
 
 [data-md-color-scheme="slate"] {
