--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,6 +5,7 @@
     --md-accent-fg-color: #b22c00;
     --md-accent-fg-color--light: #b22c00;
     --md-accent-fg-color--dark: #b22c00;
+    --md-primary-bg-color: #333333;
 }
 
 [data-md-color-scheme="slate"] {
