--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,7 +1,7 @@
 :root {
-    --md-primary-fg-color: #E0F900;
-    --md-primary-fg-color--light: #E0F900;
-    --md-primary-fg-color--dark: #E0F900;
+    --md-primary-fg-color: #e54040;
+    --md-primary-fg-color--light: #e54040;
+    --md-primary-fg-color--dark: #e54040;
     --md-accent-fg-color: #b22c00;
     --md-accent-fg-color--light: #b22c00;
     --md-accent-fg-color--dark: #b22c00;
