--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,7 +5,7 @@
     --md-accent-fg-color: #b22c00;
     --md-accent-fg-color--light: #b22c00;
     --md-accent-fg-color--dark: #b22c00;
-    --md-primary-bg-color: #444444;
+    --md-primary-bg-color: ##000000;
 }
 
 [data-md-color-scheme="slate"] {
