--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,11 +1,11 @@
 :root {
+    --md-primary-bg-color: #000000;
     --md-primary-fg-color: #e54040;
     --md-primary-fg-color--light: #e54040;
     --md-primary-fg-color--dark: #e54040;
     --md-accent-fg-color: #b22c00;
     --md-accent-fg-color--light: #b22c00;
     --md-accent-fg-color--dark: #b22c00;
-    --md-primary-bg-color: ##000000;
 }
 
 [data-md-color-scheme="slate"] {
