--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 :root {
-    --md-primary-bg-color: #000000;
+    --md-primary-bg-color: #ffffff;
     --md-primary-fg-color: #e54040;
     --md-primary-fg-color--light: #e54040;
     --md-primary-fg-color--dark: #e54040;
