--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,9 +6,9 @@
     --md-primary-fg-color: #e54040;
     --md-primary-fg-color--light: #e54040;
     --md-primary-fg-color--dark: #e54040;
-    --md-accent-fg-color: #b22c00;
-    --md-accent-fg-color--light: #b22c00;
-    --md-accent-fg-color--dark: #b22c00;
+    --md-accent-fg-color: #004ddd;
+    --md-accent-fg-color--light: #004ddd;
+    --md-accent-fg-color--dark: #004ddd;
     --md-primary-bg-color: #ffffff;
 }
 
