--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,9 +6,9 @@
     --md-primary-fg-color: #e54040;
     --md-primary-fg-color--light: #e54040;
     --md-primary-fg-color--dark: #e54040;
-    --md-accent-fg-color: #4f66ff;
-    --md-accent-fg-color--light: #4f66ff;
-    --md-accent-fg-color--dark: #4f66ff;
+    --md-accent-fg-color: #68a4ee;
+    --md-accent-fg-color--light: #68a4ee;
+    --md-accent-fg-color--dark: #68a4ee;
     --md-primary-bg-color: #ffffff;
 }
 
