--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -17,7 +17,7 @@
     --md-code-font: "Roboto mono";
 }
 
-/* ROUNDED CORNERS SITEWIDE */
+/*====== ROUNDED CORNERS SITEWIDE ======*/
 
 :root {
     --base-border-radius: 0.5rem;
@@ -50,7 +50,7 @@
 }
 
 .md-typeset .grid.cards>ul>li:hover {
-    box-shadow: 0 0 0.2rem #ffffff40;
+    box-shadow: 0 0 0.2rem;
 }
 
 /* Markdown Button */
