--- a/docs/_stylesheets/extra.css
+++ b/docs/_stylesheets/extra.css
@@ -50,7 +50,7 @@
 }
 
 .md-typeset .grid.cards>ul>li:hover {
-    box-shadow: 0 0 0.2rem;
+    box-shadow: 0 0 0.2rem #ffffff40;
 }
 
 /* Markdown Button */
